sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var longueur=0
  longueur=int(getNombreValeur())
  var i=0
  var test1=0
  var test2=0
  var pos1=0
  var pos2=0
  for (k<-0 to longueur){
    for(i<- 0 to longeur-k){
      pos1=i
      pos2=i+1
      test1=getValeur(pos1)
      test2=getValeur(pos2)
      if (test1>test2){
        echange(pos1,pos2)
      }
  	}
  }  
}